Add main functionalities

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -26,3 +26,7 @@
 @import './components/account';
 @import './components/breadcrumb';
 @import './components/create-post';
+@import './components/load';
+@import './components/error';
+@import './components/single-news';
+@import './components/edit-post';
