--- a/src/assets/css/components/_button.scss
+++ b/src/assets/css/components/_button.scss
@@ -11,4 +11,11 @@
   text-decoration: none;
   text-transform: uppercase;
   text-align: center;
+  cursor: pointer;
+}
+
+.button-edit {
+  margin-left: auto;
+  margin-top: 40px;
+  width: 210px;
 }
