--- a/src/assets/css/components/_news.scss
+++ b/src/assets/css/components/_news.scss
@@ -20,6 +20,10 @@
   margin-bottom: 60px;
 }
 
+.news-list-link {
+  text-decoration: none;
+}
+
 .news-list-image {
   width: 100%;
   max-width: 280px;
