--- a/src/assets/css/components/_load-more-button.scss
+++ b/src/assets/css/components/_load-more-button.scss
@@ -10,6 +10,7 @@
   margin: 10px auto 0;
   line-height: 3.5;
   letter-spacing: 0.2em;
+  text-decoration: none;
   text-align: center;
   cursor: pointer;
 }
