--- a/src/assets/css/components/_breadcrumb.scss
+++ b/src/assets/css/components/_breadcrumb.scss
@@ -14,6 +14,7 @@
   color: $color-black;
   font-family: $font-montserrat;
   font-size: $base-font-size;
+  letter-spacing: .1em;
 }
 
 .breadcrumb-text-link {
